@@ -1,5 +1,4 @@
 BUGS:
-raster:         pager sel_win pixmap contents nto re-rendered properly
 raster:         need to investigate "The icons in the iconbox have garbage three pixels to the right of where the image doesn't have transparency exept for the part where the image has transparency." issue reported.
 raster:         reported stuff-up if you remember borders for dialog windows
 cK:		keeping the groups file in sync with the existing groups that need to be remembered. I'm sure there are bugs in that.
